--- a/style.css
+++ b/style.css
@@ -1776,6 +1776,7 @@ aside.knjiga ul li {
 
 #tabs {
 	margin-top: 70px;
+	border-bottom: 1px solid #A6A6A6;
 }
 
 #tabs ul {
@@ -1785,7 +1786,6 @@ aside.knjiga ul li {
 #tabs ul li {
 	list-style: none;
 	float: left;
-	border-bottom: 3px solid #a6a6a6;
 	margin: 0;
 	padding: 0 15px;
 }
