--- a/style.css
+++ b/style.css
@@ -1026,8 +1026,12 @@ aside ul li ul li:first-child {
 
 .profabout h1 {
 	margin-top: 0;
-	margin-bottom: 25px !important;
+	margin-bottom: 3px !important;
 	float: none !important;
+}
+
+.profabout .pozicija {
+	color: #bdbdbd;
 }
 
 .profabout h1 a {
