Postavljanje za default slike ako ne postoji za profesora.

--- a/style.css
+++ b/style.css
@@ -1027,7 +1027,7 @@ aside ul li ul li:first-child {
 }
 
 .cat {
-	margin-right: 0px !important;
+	/*margin-right: 0px !important;*/
 }
 
 .cat img {
