--- a/css/jquery.bxslider.css
+++ b/css/jquery.bxslider.css
@@ -19,6 +19,7 @@
 	margin: 0 auto 60px;
 	padding: 0;
 	*zoom: 1;
+	overflow: hidden;
 }
 
 .bx-wrapper img {
@@ -30,12 +31,14 @@
 ===================================*/
 
 .bx-wrapper .bx-viewport {
-	-moz-box-shadow: 0 0 5px #ccc;
+	/*-moz-box-shadow: 0 0 5px #ccc;
 	-webkit-box-shadow: 0 0 5px #ccc;
 	box-shadow: 0 0 5px #ccc;
 	border:  5px solid #fff;
 	left: -5px;
+
 	background: #fff;
+	*/
 	
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
@@ -48,7 +51,7 @@
 .bx-wrapper .bx-pager,
 .bx-wrapper .bx-controls-auto {
 	position: absolute;
-	bottom: -30px;
+	bottom: 60px;
 	width: 100%;
 }
 
@@ -84,7 +87,7 @@
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a {
-	background: #666;
+	background: rgba(255, 255, 255, 0.4);
 	text-indent: -9999px;
 	display: block;
 	width: 10px;
@@ -94,23 +97,36 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
+	opacity: 1.0;
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-	background: #000;
+	background: #fff;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: 10px;
-	background: url(images/controls.png) no-repeat 0 -32px;
+	left: 20px;
+}
+
+.bx-wrapper .bx-prev::after {
+    left: 10px;
+    font-family: FontAwesome;
+    content: "\f104";
+    padding-right: 3px;
 }
 
 .bx-wrapper .bx-next {
+	right: 20px;
+}
+
+.bx-wrapper .bx-next::after {
 	right: 10px;
-	background: url(images/controls.png) no-repeat -43px -32px;
+    font-family: FontAwesome;
+    content: "\f105";
+    padding-right: 3px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -122,14 +138,25 @@
 }
 
 .bx-wrapper .bx-controls-direction a {
-	position: absolute;
-	top: 50%;
-	margin-top: -16px;
-	outline: 0;
-	width: 32px;
-	height: 32px;
-	text-indent: -9999px;
-	z-index: 9999;
+    font-size: 72px;
+    opacity: 0.4;
+    filter: alpha(opacity=40);
+    -webkit-opacity: 0.4;
+    -moz-opacity: 0.4;
+    position: absolute;
+    top: 40%;
+    margin-top: -16px;
+    outline: 0;
+    z-index: 9999;
+}
+
+.bx-wrapper .bx-controls-direction a:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100);
+    -webkit-opacity:1.0;
+    -moz-opacity: 1.0;
+	text-decoration: none;
+   
 }
 
 .bx-wrapper .bx-controls-direction a.disabled {
