--- a/style.css
+++ b/style.css
@@ -963,6 +963,7 @@ aside ul li ul li:first-child {
 	font-weight: 400;
 	line-height: 27px;
 	padding-left: 20px;
+	color: #3d3d3d;
 }
 
 .page-content ul li:before {
@@ -2376,8 +2377,13 @@ aside.knjiga ul li {
 		margin: 0;
 	}
 
+	table {
+		width: 100% !important;
+		overflow: auto;
+	}
+
 }
-@media only screen and (min-width:1024px) {
+@media only screen and (max-width:768px) {
 
 }
 @media only screen and (min-width:1140px) {
