--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 }
 img {
 	max-width:100%;
+	height: auto;
 	vertical-align:bottom;
 }
 a {
@@ -2169,6 +2170,63 @@ span.button {
 	background-color: #1A9EBC;
 }
 
+
+
+/* Nastavnički servis */
+
+.svi-servisi a {
+	float: left;
+	margin-right: 20px;
+	display: table;
+	width: 70px;
+	-webkit-transition: all 0.5s ease-out 0s;
+    -moz-transition: all 0.5s ease-out 0s;
+    -ms-transition: all 0.5s ease-out 0s;
+    -o-transition: all 0.5s ease-out 0s;
+    transition: all 0.5s ease-out 0s;
+}
+
+.svi-servisi a:hover  {
+	text-decoration: none;
+}
+
+.svi-servisi a:hover .block-servis {
+	opacity: 0.75;
+}
+
+.svi-servisi .block-servis {
+	width: 70px;
+	height: 70px;
+	background-color: #355C59;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	display: table;
+	-webkit-transition: all 0.5s ease-out 0s;
+    -moz-transition: all 0.5s ease-out 0s;
+    -ms-transition: all 0.5s ease-out 0s;
+    -o-transition: all 0.5s ease-out 0s;
+    transition: all 0.5s ease-out 0s;
+}
+
+
+.svi-servisi .block-servis .fa{
+    color: #fff;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 24px;
+    font-weight: 100;
+}
+
+
+.svi-servisi span {
+	display: table;
+    margin: 0 auto;
+    font-size: 15px;
+    text-align: center;
+}
 
 
 /* End Studijski program */
