--- a/style.css
+++ b/style.css
@@ -2007,7 +2007,7 @@ a.page-numbers {
 }
 
 .bookinfo a:after {
-	content: ';'
+	/*content: ';' */
 }
 
 .bookinfo .nastavnik-field {display: table;}
