--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@ ul.icons li {
 	margin-right: 0px;
 }
 
+.headerupnav li.izdvojeno a {
+	color: rgba(202, 249, 59, 0.8);
+}
+
+
+
 .headerright {
 	float: right;
 }
