--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ nav ul li a {
 
 
 .cards {
-	bottom: 90px;
+	bottom: 30px;
 	border-radius: 4px;
 	/*overflow: hidden;*/
 	z-index: 9;
@@ -403,10 +403,11 @@ nav ul li a {
 }
 
 .cardtitle {
-	height: 174px;
+	/*height: 174px;*/
 	line-height: 174px;
 	vertical-align: middle;
 	display: table-cell;
+	padding: 30px 0;
 }
 
 .card h2 {
@@ -2772,11 +2773,26 @@ span.button {
 @media only screen and (max-width:768px) {
 
 }
-@media only screen and (min-width:1140px) {
+@media only screen and (max-width:1200px) and (min-width:768px) {
+	/*.bx-pager {
+		display: none;
+	}
 
+	.cta {
+		display: none;
+	}
+
+	.cards {
+			bottom: 80px;
+		}*/
 }
-@media only screen and (min-width:1280px) {
-
+@media only screen and (min-width:1200px) and (max-width:1450px) {
+		/*.cards {
+			bottom: 80px;
+		}
+		.bx-pager {
+			bottom: 100px !important;
+		}*/
 }
 
 /* End Responsive */
