Izmena visine kartica

--- a/style.css
+++ b/style.css
@@ -347,7 +347,6 @@ nav ul li a {
 	z-index: 9;
 	position: relative;
 	display: table;
-	min-height: 385px;
 }
 
 .card {
@@ -361,6 +360,7 @@ nav ul li a {
    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
    -webkit-transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
    display: table-cell;
+   padding-bottom: 30px;
 }
 
 .card::after {
