Dodate nove klase za novu stranu Nastavnički servis

--- a/style.css
+++ b/style.css
@@ -557,6 +557,14 @@ section.news {
 	color: #FFF!important;
 }
 
+.ctanews.studenti {
+	clear: both;
+}
+
+.ctanews.studenti a {
+	color: #FFF!important;
+}
+
 
 .block-nauka {
 	margin-bottom: 30px;
@@ -2306,6 +2314,17 @@ span.button {
     font-size: 15px;
     text-align: center;
 }
+
+
+.svi-servisi.materijali-nastava {
+	clear: both;
+	display: table;
+}
+
+.svi-servisi.materijali-nastava h2 {
+	margin-top: 30px;
+}
+
 
 
 /* End Studijski program */
